force-app/main/default/objects/FieloEE__Component__c/FieloEE__Component__c.object-meta.xml
<CustomObject>
    <description>The elements that make up the pages in the members’ portal. Examples of components are “Menu”, “Content”, “Content Feed”, “Banner”, etc.</description>
    <label>Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Component</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>