force-app/main/default/objects/FieloEE__Component__c/fields/FieloCH__ChallengeType__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__ChallengeType__c</fullName>
    <inlineHelpText>Active List: Displays the challenges that the member is participating.
History: Displays the challenges finished by the member with the results.
Subscribe List: Displays the challenges that the member has available to subscribe.</inlineHelpText>
    <label>Challenge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active list</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Subscribe list</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>