force-app/main/default/objects/FieloEE__Component__c/fields/FieloCH__ChallengeViewDisplay__c.field-meta.xml
<CustomField>
    <fullName>FieloCH__ChallengeViewDisplay__c</fullName>
    <label>Challenge View Display</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Details</fullName>
            </value>
            <value>
                <fullName>Missions</fullName>
            </value>
            <value>
                <fullName>Rewards</fullName>
            </value>
            <value>
                <fullName>Leaderboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>