force-app/main/default/objects/FieloEE__Component__c/fields/FieloCRUD__CssClassName__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__CssClassName__c</fullName>
    <label>CRUD / ListView CSS Class Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>