force-app/main/default/objects/FieloEE__Component__c/fields/FieloCRUD__ListView__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ListView__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>List View</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FieloCRUD__ListView__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>List View</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FieloCRUD__ListView__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>F_Components</relationshipName>
    <type>Lookup</type>
</CustomField>