force-app/main/default/objects/FieloEE__Component__c/fields/FieloCRUD__ObjectSettings__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__ObjectSettings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Defines the Object Setting where you want to add CRUD actions.</inlineHelpText>
    <label>Object Settings</label>
    <referenceTo>FieloCRUD__ObjectSettings__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>