force-app/main/default/objects/FieloEE__Component__c/fields/FieloCRUD__PageLayout__c.field-meta.xml
<CustomField>
    <fullName>FieloCRUD__PageLayout__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only complete this field if you want to display "Form" or "Profile" page layouts.</inlineHelpText>
    <label>Page Layout</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FieloCRUD__PageLayout__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Form, Profile, Static</value>
        </filterItems>
        <filterItems>
            <field>FieloCRUD__PageLayout__c.FieloCRUD__ObjectSettings__c</field>
            <operation>equals</operation>
            <valueField>$Source.FieloCRUD__ObjectSettings__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FieloCRUD__PageLayout__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>