force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__BannerPlacement__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__BannerPlacement__c</fullName>
    <description>Field to filter banners when using a Banner widget.</description>
    <label>Banner placement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home Top</fullName>
            </value>
            <value>
                <fullName>Home Side</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>