force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Category__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Category of the items you want to be shown by this component.</description>
    <inlineHelpText>Select the category that will be shown by this component.</inlineHelpText>
    <label>Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FieloEE__Category__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Category Group, Category Item</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FieloEE__Category__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>