force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__CCS__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__CCS__c</fullName>
    <description>CSS code to modify the look and formatting of this component.</description>
    <inlineHelpText>Enter a CSS code that will modify this component.</inlineHelpText>
    <label>CSS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>