force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Content__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Content__c</fullName>
    <description>A content consisting of rich text and images that will be showed in the members&#39; portal.</description>
    <inlineHelpText>Enter text and images.</inlineHelpText>
    <label>Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>