force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__CSSClasses__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__CSSClasses__c</fullName>
    <description>Here the CSS classes for the corresponding component will be stored.</description>
    <inlineHelpText>Enter the CSS classes for the corresponding component.</inlineHelpText>
    <label>CSS Classes</label>
    <type>TextArea</type>
</CustomField>