force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Delay__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Delay__c</fullName>
    <description>The time in milliseconds that this image will be showed.</description>
    <inlineHelpText>Set the time, in milliseconds, for each image to be shown.</inlineHelpText>
    <label>Delay</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>