force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Desktop__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Desktop__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this option will make the component show in a desktop computer.</description>
    <inlineHelpText>Check this option if you want this component to be shown in a desktop computer.</inlineHelpText>
    <label>Desktop</label>
    <type>Checkbox</type>
</CustomField>