force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Display__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Display__c</fullName>
    <description>Deleted</description>
    <label>Display</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FieloEE__Layout__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Grid</fullName>
            </value>
            <value>
                <fullName>Internal Page</fullName>
            </value>
            <value>
                <fullName>Modal</fullName>
            </value>
            <value>
                <fullName>Accordion</fullName>
            </value>
            <value>
                <fullName>Scrollbars</fullName>
            </value>
            <value>
                <fullName>No Scrollbars</fullName>
            </value>
            <value>
                <fullName>Top</fullName>
            </value>
            <value>
                <fullName>Bottom</fullName>
            </value>
            <value>
                <fullName>Left</fullName>
            </value>
            <value>
                <fullName>Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>