force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Filter2__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Filter2__c</fullName>
    <description>Deprecated Field</description>
    <label>zz_deprecated_Filter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FieloExtraTag_allPrizes</fullName>
            </value>
            <value>
                <fullName>FieloExtraTag_myPrizes</fullName>
            </value>
            <value>
                <fullName>FieloExtraTag_wishList</fullName>
            </value>
            <value>
                <fullName>FieloExtraTag_mostRecent</fullName>
            </value>
            <value>
                <fullName>FieloExtraTag_mostVoted</fullName>
            </value>
            <value>
                <fullName>FieloExtraTag_mostPolular</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>