force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Filter__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Filter__c</fullName>
    <description>This field will be populated by the trigger and it will contain the CSS classes depending on the visibility of the Component by device.</description>
    <label>Display Device</label>
    <length>255</length>
    <type>Text</type>
</CustomField>