force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__FilterBySegment__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FilterBySegment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The segment of members to which this item will be showed.</description>
    <inlineHelpText>Pick the segments you want to show this item to.</inlineHelpText>
    <label>Filter By Segment</label>
    <type>Checkbox</type>
</CustomField>