force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Height__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Height__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Component Height</description>
    <label>Height</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>