force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Layout__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Layout__c</fullName>
    <label>Layout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Grid</fullName>
            </value>
            <value>
                <fullName>Slider</fullName>
            </value>
            <value>
                <fullName>Tabs</fullName>
            </value>
            <value>
                <fullName>Row</fullName>
            </value>
            <value>
                <fullName>Column</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>