force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Menu__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Menu__c</fullName>
    <label>Menu</label>
    <referenceTo>FieloEE__Menu__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>