force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__MenuRedirect__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__MenuRedirect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Menu Redirect</label>
    <referenceTo>FieloEE__Menu__c</referenceTo>
    <relationshipLabel>Components (Menu Redirect)</relationshipLabel>
    <relationshipName>Components1</relationshipName>
    <type>Lookup</type>
</CustomField>