force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Mobile__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Mobile__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this option will make the component show in a cell phone.</description>
    <inlineHelpText>Check this option for making this component visible in a mobile device.</inlineHelpText>
    <label>Mobile</label>
    <type>Checkbox</type>
</CustomField>