force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Modal__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Modal__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Deprecated Field</description>
    <label>Use URL Filters</label>
    <type>Checkbox</type>
</CustomField>