force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__NewsType__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__NewsType__c</fullName>
    <label>Content feed type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>FAQ</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>