force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__OptionalName__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__OptionalName__c</fullName>
    <description>A title that will be showed on top of the component.</description>
    <inlineHelpText>Enter a title to be showed on top of the component.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>