force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Order__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Order__c</fullName>
    <description>The order in which the components are placed in the section.</description>
    <inlineHelpText>Select the order in which the components are placed in the section.</inlineHelpText>
    <label>Order</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>