force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__OrderBy__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__OrderBy__c</fullName>
    <description>The order in which rewards are showed in the catalog.</description>
    <inlineHelpText>Choose the order criteria for rewards.</inlineHelpText>
    <label>Order By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Name - Points</fullName>
            </value>
            <value>
                <fullName>Points - Name</fullName>
            </value>
            <value>
                <fullName>Name</fullName>
                <default>true</default>
                <label>Name</label>
            </value>
            <value>
                <fullName>Points</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>