force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__PageName__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__PageName__c</fullName>
    <label>Page Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>