force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Paging__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Paging__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Checking this option will show a paging section for the component. If left unchecked, all items will show in a single page.</description>
    <inlineHelpText>Check this option if you want a paging section.</inlineHelpText>
    <label>Paging</label>
    <type>Checkbox</type>
</CustomField>