force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Qant__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Qant__c</fullName>
    <description>Number of items to be showed in a page.</description>
    <inlineHelpText>Set the number of items to show per page.</inlineHelpText>
    <label>Items per Page</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>