force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Qcolumns__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Qcolumns__c</fullName>
    <description>The number of columns in the grid view.</description>
    <inlineHelpText>Set the number of columns (for the grid view only).</inlineHelpText>
    <label>Number of Columns</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>