force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Qrows__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Qrows__c</fullName>
    <description>The number of rows in the grid view.</description>
    <inlineHelpText>Set the number of rows (for the Grid view only).</inlineHelpText>
    <label>Number of Rows</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>