force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Section__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Section to which the component belongs</description>
    <label>Section</label>
    <referenceTo>FieloEE__Section__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>