force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Tag__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Tag__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Tag of the items you want to be shown by this component.</description>
    <inlineHelpText>Select the tag that will be shown by this component.</inlineHelpText>
    <label>Tag</label>
    <referenceTo>FieloEE__Tag__c</referenceTo>
    <relationshipLabel>Components</relationshipLabel>
    <relationshipName>Components</relationshipName>
    <type>Lookup</type>
</CustomField>