force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Type__c</fullName>
    <description>Deprecated Field</description>
    <label>zz_deprecated_Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Slider</fullName>
            </value>
            <value>
                <fullName>Row</fullName>
            </value>
            <value>
                <fullName>Column</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>