force-app/main/default/objects/FieloEE__Component__c/fields/FieloEE__Width__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Width__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Component Width</description>
    <label>Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>