force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloCH__ChallengeDetail.recordType-meta.xml
<RecordType>
    <fullName>FieloCH__ChallengeDetail</fullName>
    <active>true</active>
    <label>Challenge Detail</label>
</RecordType>