force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloCH__ChallengeLeaderboard.recordType-meta.xml
<RecordType>
    <fullName>FieloCH__ChallengeLeaderboard</fullName>
    <active>true</active>
    <label>Challenge Leaderboard</label>
</RecordType>