force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloCH__ChallengeMissions.recordType-meta.xml
<RecordType>
    <fullName>FieloCH__ChallengeMissions</fullName>
    <active>true</active>
    <label>Challenge Missions</label>
</RecordType>