force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloCH__ChallengeRewards.recordType-meta.xml
<RecordType>
    <fullName>FieloCH__ChallengeRewards</fullName>
    <active>true</active>
    <label>Challenge Rewards</label>
</RecordType>