force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloCH__Challenges.recordType-meta.xml
<RecordType>
    <fullName>FieloCH__Challenges</fullName>
    <active>true</active>
    <label>Challenges</label>
</RecordType>