force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloCRUD__CRUD.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__CRUD</fullName>
    <active>true</active>
    <label>CRUD</label>
</RecordType>