force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloCRUD__ListView.recordType-meta.xml
<RecordType>
    <fullName>FieloCRUD__ListView</fullName>
    <active>true</active>
    <label>List View</label>
</RecordType>