force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__Badges.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Badges</fullName>
    <active>true</active>
    <label>Badges</label>
</RecordType>