force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__Banner.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Banner</fullName>
    <active>true</active>
    <label>Banner</label>
</RecordType>