force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__BannerWidget.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__BannerWidget</fullName>
    <active>true</active>
    <label>Banner Widget</label>
</RecordType>