force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__Branchs.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Branchs</fullName>
    <active>true</active>
    <label>Branches</label>
</RecordType>