force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__Breadcrumb.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Breadcrumb</fullName>
    <active>false</active>
    <label>Breadcrumb</label>
</RecordType>