force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__Catalog.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Catalog</fullName>
    <active>true</active>
    <label>Catalog</label>
</RecordType>