force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__Categories.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Categories</fullName>
    <active>true</active>
    <label>Categories</label>
</RecordType>