force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__Content.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Content</fullName>
    <active>true</active>
    <label>Content</label>
</RecordType>