force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__ContentWidget.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__ContentWidget</fullName>
    <active>true</active>
    <label>Content Widget</label>
</RecordType>