force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__GetPoints.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__GetPoints</fullName>
    <active>true</active>
    <label>GetPoints</label>
</RecordType>