force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__IncludePage.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__IncludePage</fullName>
    <active>true</active>
    <label>Include Page</label>
</RecordType>