force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__Login.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Login</fullName>
    <active>true</active>
    <label>Login</label>
</RecordType>