force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__Menu.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Menu</fullName>
    <active>true</active>
    <label>Menu</label>
</RecordType>