force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__News.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__News</fullName>
    <active>true</active>
    <label>Content Feed</label>
</RecordType>