force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__Profile.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Profile</fullName>
    <active>true</active>
    <label>Profile</label>
</RecordType>