force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__Redemptions.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Redemptions</fullName>
    <active>true</active>
    <label>Redemptions</label>
</RecordType>