force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__Register.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Register</fullName>
    <active>true</active>
    <label>Register</label>
</RecordType>