force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__Search.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Search</fullName>
    <active>false</active>
    <label>Search</label>
</RecordType>