force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__ShoppingCart.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__ShoppingCart</fullName>
    <active>false</active>
    <label>ShoppingCart</label>
</RecordType>