force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloEE__Transactions.recordType-meta.xml
<RecordType>
    <fullName>FieloEE__Transactions</fullName>
    <active>true</active>
    <label>Transactions</label>
</RecordType>