force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloSVY__Survey.recordType-meta.xml
<RecordType>
    <fullName>FieloSVY__Survey</fullName>
    <active>true</active>
    <label>Survey</label>
</RecordType>