force-app/main/default/objects/FieloEE__Component__c/recordTypes/FieloSVY__SurveyCatalog.recordType-meta.xml
<RecordType>
    <fullName>FieloSVY__SurveyCatalog</fullName>
    <active>true</active>
    <label>Survey Catalog</label>
</RecordType>